fix distortion css class for profile page

--- a/app/globals.css
+++ b/app/globals.css
@@ -108,3 +108,10 @@
   width: 100%;
   height: 100%;
 }
+
+.user-image-set {
+  object-fit: cover;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+}
